First cut of a stateless BFF election-runner
