# routes/api.php
@@ -15,6 +15,8 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
+Route::post('calculateResult', 'StatelessElectionController@calculateResult')->name('calculateResult');
+
 Route::middleware('auth:api')->get('/user', function (Request $request) {
     return $request->user();
 });
