# storage/api-docs/api-docs.json
@@ -175,7 +175,7 @@
                     {
                         "name": "payload",
                         "in": "body",
-                        "description": "Candidate to add",
+                        "description": "Candidate to update",
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/CreateCandidate"
@@ -457,28 +457,76 @@
                     }
                 }
             }
+        },
+        "/calculateResult": {
+            "post": {
+                "tags": [
+                    "Stateless Election Result"
+                ],
+                "summary": "Run a stateless election using BFF ballots",
+                "operationId": "calculateResult",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "text/plain"
+                ],
+                "parameters": [
+                    {
+                        "name": "ballots",
+                        "in": "formData",
+                        "description": "One or more BFF ballots, one on each line",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "tieBreaker",
+                        "in": "formData",
+                        "description": "One BFF Ballot for resolving intermediate ties",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "description": "JSON with a key `result` whose value is a BFF election result",
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
+            }
         }
     },
     "definitions": {
         "Candidate": {
             "properties": {
                 "id": {
+                    "description": "",
                     "type": "string",
                     "example": "123"
                 },
                 "election_id": {
+                    "description": "",
                     "type": "string",
                     "example": "123"
                 },
                 "name": {
+                    "description": "",
                     "type": "string",
                     "example": "Funds for road construction"
                 },
                 "created_at": {
+                    "description": "",
                     "type": "string",
                     "example": "2017-01-01 11:00:00"
                 },
                 "updated_at": {
+                    "description": "",
                     "type": "string",
                     "example": "2017-01-01 11:00:00"
                 }
@@ -491,6 +539,7 @@
         "Code": {
             "properties": {
                 "code": {
+                    "description": "",
                     "type": "string",
                     "example": "12345678"
                 }
@@ -503,6 +552,7 @@
         "CreateCandidate": {
             "properties": {
                 "name": {
+                    "description": "",
                     "type": "string",
                     "example": "Highland Avenue"
                 }
@@ -515,26 +565,32 @@
         "Election": {
             "properties": {
                 "id": {
+                    "description": "",
                     "type": "string",
                     "example": "123"
                 },
                 "creator_id": {
+                    "description": "",
                     "type": "string",
                     "example": "123"
                 },
                 "name": {
+                    "description": "",
                     "type": "string",
                     "example": "Funds for road construction"
                 },
                 "created_at": {
+                    "description": "",
                     "type": "string",
                     "example": "2017-01-01 11:00:00"
                 },
                 "updated_at": {
+                    "description": "",
                     "type": "string",
                     "example": "2017-01-01 11:00:00"
                 },
                 "deleted_at": {
+                    "description": "",
                     "type": "string",
                     "example": "2017-01-01 11:00:00"
                 }
@@ -547,30 +603,37 @@
         "ElectionWithCreator": {
             "properties": {
                 "id": {
+                    "description": "",
                     "type": "string",
                     "example": "123"
                 },
                 "creator_id": {
+                    "description": "",
                     "type": "string",
                     "example": "123"
                 },
                 "name": {
+                    "description": "",
                     "type": "string",
                     "example": "Funds for road construction"
                 },
                 "created_at": {
+                    "description": "",
                     "type": "string",
                     "example": "2017-01-01 11:00:00"
                 },
                 "updated_at": {
+                    "description": "",
                     "type": "string",
                     "example": "2017-01-01 11:00:00"
                 },
                 "deleted_at": {
+                    "description": "",
                     "type": "string",
                     "example": "2017-01-01 11:00:00"
                 },
                 "creator": {
+                    "description": "",
                     "$ref": "#/definitions/User"
                 }
             },
@@ -582,6 +645,7 @@
         "Email": {
             "properties": {
                 "email": {
+                    "description": "",
                     "type": "string",
                     "example": "john.doe@example.com"
                 }
@@ -594,26 +658,32 @@
         "Invite": {
             "properties": {
                 "id": {
+                    "description": "",
                     "type": "string",
                     "example": "123"
                 },
                 "code": {
+                    "description": "",
                     "type": "string",
                     "example": "12345678"
                 },
                 "email": {
+                    "description": "",
                     "type": "string",
                     "example": "john.doe@example.com"
                 },
                 "accepted_at": {
+                    "description": "",
                     "type": "string",
                     "example": "2017-01-01 11:00:00"
                 },
                 "created_at": {
+                    "description": "",
                     "type": "string",
                     "example": "2017-01-01 11:00:00"
                 },
                 "updated_at": {
+                    "description": "",
                     "type": "string",
                     "example": "2017-01-01 11:00:00"
                 }
@@ -626,30 +696,37 @@
         "InviteWithElection": {
             "properties": {
                 "id": {
+                    "description": "",
                     "type": "string",
                     "example": "123"
                 },
                 "code": {
+                    "description": "",
                     "type": "string",
                     "example": "12345678"
                 },
                 "email": {
+                    "description": "",
                     "type": "string",
                     "example": "john.doe@example.com"
                 },
                 "accepted_at": {
+                    "description": "",
                     "type": "string",
                     "example": "2017-01-01 11:00:00"
                 },
                 "created_at": {
+                    "description": "",
                     "type": "string",
                     "example": "2017-01-01 11:00:00"
                 },
                 "updated_at": {
+                    "description": "",
                     "type": "string",
                     "example": "2017-01-01 11:00:00"
                 },
                 "pivot": {
+                    "description": "",
                     "$ref": "#/definitions/PivotElection"
                 }
             },
@@ -661,10 +738,12 @@
         "PivotElection": {
             "properties": {
                 "election_id": {
+                    "description": "",
                     "type": "string",
                     "example": "123"
                 },
                 "invite_id": {
+                    "description": "",
                     "type": "string",
                     "example": "123"
                 }
@@ -677,22 +756,27 @@
         "User": {
             "properties": {
                 "id": {
+                    "description": "",
                     "type": "string",
                     "example": "123"
                 },
                 "name": {
+                    "description": "",
                     "type": "string",
                     "example": "John Doe"
                 },
                 "email": {
+                    "description": "",
                     "type": "string",
                     "example": "john.doe@example.com"
                 },
                 "created_at": {
+                    "description": "",
                     "type": "string",
                     "example": "2017-01-01 11:00:00"
                 },
                 "updated_at": {
+                    "description": "",
                     "type": "string",
                     "example": "2017-01-01 11:00:00"
                 }
